# FallingBalls

./: .gitignore  BMPImage.cpp  BMPImage.h  Ball.cpp  Ball.h  Brick.cpp  Brick.h  CMakeLists.txt  Coordinate.cpp  Coordinate.h  Font.cpp  Font.h  Force.cpp  Force.h  Game.cpp  Game.h  README.txt  SDLWrapper.cpp  SDLWrapper.h  SDL_Plotter.cpp  SDL_Plotter.h  brick.cpp  brick.h  main.cpp
include/: BMPImage.h  Coordinate.h  SDLWrapper.h
old/: BMPTransfer.cpp  BMPTransfer.h  ball.cpp  ball.h  color.h  force.cpp  force.h  point.cpp  point.h
src/: Brick.cpp  Coordinate.cpp  Font.cpp  Force.cpp  Game.cpp
